The absolute amount on the real numbers

--- a/Analysis1_script.tex
+++ b/Analysis1_script.tex
@@ -25,6 +25,8 @@
 \theoremstyle{definition} % Theorem style
 \newtheorem{theorem}{Theorem}[chapter]
 
+\newtheorem{corollary}{Folgerung}[theorem]
+
 \theoremstyle{definition} % Definition style
 \newtheorem{definition}[theorem]{Definition}
 
