--- a/Analysis1_script.tex
+++ b/Analysis1_script.tex
@@ -71,6 +71,25 @@
 		
 		\section{Intervalle und der Absolutbetrag}
 		\subfile{sections/section1-4.tex}
+		
+		\section{Maximum und Supremum}
+		\subfile{sections/section1-5.tex}
+		
+		\section{Konsequnezen der Vollständigkeit}
+		
+		\section{Modelle und Eindeutigkeit der Menge der reellen Zahlen}
+	
+	\chapter{Funktionen und die reellen Zahlen}
+	
+		\section{Summen und Produkte}
+		
+		\section{Polynon}
+		
+		\section{Der Fakultät und der Binomialsatz}
+		
+		\section{Reelerwertige Funktionen}
+		
+		\section{Stetigkeit}
 	
 
 \end {document}
