supremum and infimum

--- a/Analysis1_script.tex
+++ b/Analysis1_script.tex
@@ -76,6 +76,7 @@
 		\subfile{sections/section1-5.tex}
 		
 		\section{Konsequnezen der Vollständigkeit}
+		\subfile{sections/section1-6.tex}
 		
 		\section{Modelle und Eindeutigkeit der Menge der reellen Zahlen}
 	
