Modification of the main file

--- a/Analysis1_script.tex
+++ b/Analysis1_script.tex
@@ -83,6 +83,7 @@
 	\chapter{Funktionen und die reellen Zahlen}
 	
 		\section{Summen und Produkte}
+		\subfile{sections/section2-1.tex}
 		
 		\section{Polynon}
 		
