--- a/Analysis1_script.tex
+++ b/Analysis1_script.tex
@@ -86,6 +86,7 @@
 		\subfile{sections/section2-1.tex}
 		
 		\section{Polynon}
+		\subfile{sections/section2-2.tex}
 		
 		\section{Der Fakultät und der Binomialsatz}
 		
