--- a/Analysis1_script.tex
+++ b/Analysis1_script.tex
@@ -30,6 +30,8 @@
 \theoremstyle{definition} % Definition style
 \newtheorem{definition}[theorem]{Definition}
 
+\newtheorem{example}{Beispliel}[theorem]
+
 \theoremstyle{definition} % Proposition style
 \newtheorem{proposition}[theorem]{Satz}
 
@@ -85,7 +87,7 @@
 		\section{Summen und Produkte}
 		\subfile{sections/section2-1.tex}
 		
-		\section{Polynon}
+		\section{Polynome}
 		\subfile{sections/section2-2.tex}
 		
 		\section{Der Fakultät und der Binomialsatz}
