new section Faktorial

--- a/Analysis1_script.tex
+++ b/Analysis1_script.tex
@@ -91,6 +91,7 @@
 		\subfile{sections/section2-2.tex}
 		
 		\section{Der Fakultät und der Binomialsatz}
+		\subfile{sections/section2-3.tex}
 		
 		\section{Reelerwertige Funktionen}
 		
