real-valued functions

--- a/Analysis1_script.tex
+++ b/Analysis1_script.tex
@@ -94,6 +94,7 @@
 		\subfile{sections/section2-3.tex}
 		
 		\section{Reelerwertige Funktionen}
+		\subfile{sections/section2-4.tex}
 		
 		\section{Stetigkeit}
 	
