--- a/sections/section2-4.tex
+++ b/sections/section2-4.tex
@@ -13,4 +13,16 @@
 \end{definition}
 
 \subsection{Monotonie}
+
+\begin{definition}{(Monotonieeigenschaften)}
+	Eine Funktion $f: D \to \mathbb{R}$ ist
+	\begin{itemize}
+		\item{\textbf{monoton wachsend}}, falls $\forall x, y \in D: x \leq y \implies f(x) \leq f(y)$,
+		\item{\textbf{streng monoton wachsend}}, falls $\forall x, y \in D: x < y \implies f(x) < f(y)$,
+		\item{\textbf{monoton fallsend}}, falls $\forall x, y \in D: x \leq y \implies f(x) \geq f(y)$,
+		\item{\textbf{strend monoton fallend}}, falls $\forall x, y \in D: x < y \implies f(x) > f(y)$,
+		\item{\textbf{monoton}}, falls $f$ monoton wachsend oder monoton fallend ist,
+		\item{\textbf{streng monoton}}, falls $f$ streng monoton wachsend oder streng monoton fallend ist.
+	\end{itemize}
+\end{definition}
 \end{document}
